--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.2.0",
     "react-jss": "^10.7.1",
     "react-owl-carousel": "^2.3.3",
+    "react-responsive": "^9.0.0-beta.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
