--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "bootstrap-icons": "^1.5.0",
     "bulma": "^0.9.3",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-formik": "^1.7.2",
     "react-bootstrap-icons": "^1.5.0",
     "react-burger-menu": "^3.0.6",
     "react-collapsible": "^2.8.3",
@@ -44,7 +46,8 @@
     "simple-flexbox": "^2.3.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
