--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-jss": "^10.7.1",
+    "react-loader-spinner": "^4.0.0",
     "react-owl-carousel": "^2.3.3",
     "react-responsive": "^9.0.0-beta.3",
     "react-router-bootstrap": "^0.25.0",
