--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap-icons": "^1.5.0",
     "react-burger-menu": "^3.0.6",
     "react-collapsible": "^2.8.3",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-jss": "^10.7.1",
