--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-json-to-csv": "^1.0.4",
     "react-jss": "^10.7.1",
     "react-loader-spinner": "^4.0.0",
     "react-owl-carousel": "^2.3.3",
@@ -49,6 +50,7 @@
     "simple-flexbox": "^2.3.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
+    "toastr": "2.1.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
