--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-toastify": "^7.0.4",
     "reactstrap": "^8.9.0",
     "scss": "^0.2.4",
     "simple-flexbox": "^2.3.3",
