--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-jss": "^10.7.1",
     "react-loader-spinner": "^4.0.0",
     "react-owl-carousel": "^2.3.3",
+    "react-private-public-route": "^1.1.1",
     "react-responsive": "^9.0.0-beta.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
