--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.1",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
@@ -35,6 +36,7 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-icons": "^4.2.0",
     "react-json-to-csv": "^1.0.4",
     "react-jss": "^10.7.1",
