--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-bootstrap-icons": "^1.5.0",
     "react-burger-menu": "^3.0.6",
     "react-collapsible": "^2.8.3",
+    "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
