--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "styled-components": "^5.3.0",
     "toastr": "2.1.2",
     "web-vitals": "^1.1.2",
+    "xlsx": "^0.17.1",
     "yup": "^0.32.9"
   },
   "scripts": {
